<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="347dp"
            android:layout_height="321dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/img_upload_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="36dp"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:text="@string/gallery"
            app:layout_constraintStart_toStartOf="@+id/cameraButton"
            app:layout_constraintTop_toTopOf="@+id/cameraButton" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="@+id/location_access"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/location_access"
            app:layout_constraintTop_toBottomOf="@+id/location_access" />

        <EditText
            android:id="@+id/descriptionBox"
            android:background="@drawable/input_box_border"
            android:layout_width="349dp"
            android:layout_height="99dp"
            android:layout_marginTop="24dp"
            android:autofillHints="Fill photo description"
            android:hint="@string/upload_desc_hint"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cameraButton" />

        <TextView
            android:id="@+id/location_access"
            android:layout_width="349dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:text="@string/location_warning"
            android:textColor="#BD2727"
            app:layout_constraintEnd_toEndOf="@+id/descriptionBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/descriptionBox"
            app:layout_constraintTop_toBottomOf="@+id/descriptionBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>